Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/8141343/T8141343.out
T8141343.java:22:45: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Exception&T8141343.Foo<? extends java.lang.Exception&T8141343.Foo<?>>, T8141343.Foo<java.lang.Integer>)
1 error
